# xauth

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: docker-dev.yml  docker-release.yml
docker/: Dockerfile  docker-bake.hcl
src/: config.rs  github.rs  google.rs  huawei.rs  main.rs  oauth2.rs  oidc.rs  provider.rs  qq.rs  twitter.rs  utils.rs  weibo.rs
