[package]
name = "xauth"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
data-encoding = "2.9.0"
dotenvy = "0.15.7"
jsonwebtoken = "10.3.0"
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
toml = "1.1.2"
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
wiremock = "0.6.5"
# 移除了 jsonc-parser，改用简单的方法去除注释或寻找支持 serde 的替代库
